[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ruts"
version = "0.8.1"
homepage = "https://github.com/SergeyShk/ruTS"
repository = "https://github.com/SergeyShk/ruTS"
documentation = "https://sergeyshk.github.io/ruTS/"
authors = [
    "Шкарин Сергей <kouki.sergey@gmail.com>",
    "Смирнова Екатерина <ekanerina@yandex.ru>",
]
maintainers = ["Шкарин Сергей <kouki.sergey@gmail.com>"]
description = "Russian Texts Statistics"
license = "MIT"
keywords = ["NLP", "natural", "language", "processing", "CL", "computational", "linguistics", "text", "analytics", "russian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Russian"
]
readme = "README.md"
exclude = ["tests", "docs", "ruts/datasets/data"]
include = ["LICENSE.txt", "README.en.md"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
graphviz = "^0.20.1"
matplotlib = "^3.3.0"
nltk = "^3.7"
numpy = "^1.23.0"
pandas = "^1.4.3"
pymorphy2 = "^0.9.1"
razdel = "^0.5.0"
scipy = "^1.9.0"
spacy = "^3.4.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
flakeheaven = "*"

[tool.black]
target-version = ["py38"]
line-length = 99
color = true

[tool.isort]
py_version = 38
line_length = 99
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
include_trailing_comma = true
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
python_version = 3.8
files = ["ruts"]
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.flakeheaven]
exclude = ["*.md"]
format = "grouped"
max_line_length = 99
max_complexity = 18
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
pylint = ["+*", "-E203", "-E266", "-E501", "-W503"]
pyflakes = ["+*", "-F401"]
"flake8-*" = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]

[tool.pytest.ini_options]
addopts = "-vv -x --lf"
testpaths = ["tests"]