[metadata]
description-file = README.md
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120

[mypy]
files = ruts,tests
ignore_missing_imports = True

[bandit]
ignore = B101, B108

[tool.pylint.messages_control]
ignore = CVS
output-format = colorized
max-line-length = 120
disable = arguments-differ