[metadata]
description-file = README.md
license_file = LICENSE.txt

[tool:pytest]
testpaths = tests
addopts = -vv -x --lf

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 99
max-complexity = 18
select = B,C,E,F,W,T4

[mypy]
files = ruts,tests
ignore_missing_imports = True

[bandit]
ignore = B101, B108

[tool.pylint.messages_control]
ignore = CVS
output-format = colorized
max-line-length = 99
disable = arguments-differ